# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.30.2
	Martin Väth <martin at mvath.de>:
	- Move repository to GitHub since BerliOS closes
	- Introduce REQUIRE_DROP, NODROP_FATAL, see
	  http://bugs.gentoo.org/show_bug.cgi?id=499944
	- Add tmpfiles.d/eix.conf default
	- scripts: act as with USE_NLS=no if gettext.sh cannot be found, see
	  http://bugs.gentoo.org/show_bug.cgi?id=500130
	- manpage: Add reference to color variables in FAQ and fix typos from
	  http://bugs.gentoo.org/show_bug.cgi?id=499932

*eix-0.30.1
	Martin Väth <martin at mvath.de>:
	- Add maskreason to --xml output
	- Update email
	- internal: remove redundant ATTRIBUTE_NONNULL
	- contrib/make.sh: Fix ccache handling
	- Check whether dropping of permissions worked
	- Fix message if EIX_LIMIT{,_COMPACT} equals number of all packages
	  output, see http://bugs.gentoo.org/show_bug.cgi?id=497232
	- eix-header: Add comment that -f is non-optional for portable scripts,
	  see http://bugs.gentoo.org/show_bug.cgi?id=497572
	- Use -fPIE -pie with --enable-security, see
	  http://bugs.gentoo.org/show_bug.cgi?id=497546

*eix-0.30.0
	Martin Väth <martin at mvath.de>:
	- Introduce {mainrepo} attribute; "Find open bugs" only for those, see
	  http://developer.berlios.de/bugs/?func=detailbug&bug_id=19160&
	  group_id=11597
	- Introduce OMIT_EXPAND and <{colli,}use0> attributes to omit output of
	  USE_EXPAND variables: http://bugs.gentoo.org/show_bug.cgi?id=489306
	- Let --version output only version number
	- scripts: Let -i also reset -H properly
	- Avoid #include of algorithm.h in packagetest and of packagest.h in
	  mask.h. This avoids "phantom" code with some gcc versions and flto:
	  http://developer.berlios.de/bugs/?func=detailbug&
	  bug_id=19182&group_id=11597
	- Use constexpr for some constants (if supported by dialect, of course)
	- Use gettext-0.18.3: allows to specify GNU sed
	- Remove --with-nongnu-cxx (no kludges needed anymore for current clang