@@ -14,7 +14,9 @@
 #include <cstring>
 
 #include <string>
+#include <iostream>
 
+#include "eixTk/formated.h"
 #include "eixTk/i18n.h"
 #include "eixTk/likely.h"
 #include "eixrc/eixrc.h"
@@ -23,15 +25,17 @@
 #include "various/drop_permissions.h"
 
 using std::string;
+using std::cerr;
+using std::cout;
 
 static void print_help() {
-	printf(_("Usage: %s [--] command [arguments]\n"
+	cout << eix::format(_("Usage: %s [--] command [arguments]\n"
 "Executes command [arguments] with the permissions according to the eix\n"
 "variables EIX_USER, EIX_GROUP, EIX_UID, and EIX_GID,\n"
 "honouring REQUIRE_DROP and NODROP_FATAL.\n"
 "\n"
 "This program is covered by the GNU General Public License. See COPYING for\n"
-"further information.\n"), program_name);
+"further information.\n")) % program_name;
 }
 
 int run_eix_drop_permissions(int argc, char *argv[]) {
@@ -51,12 +55,13 @@ int run_eix_drop_permissions(int argc, char *argv[]) {
 	string errtext;
 	bool success(drop_permissions(&eixrc, &errtext));
 	if(unlikely(!errtext.empty())) {
-		fprintf(stderr, "%s\n", errtext.c_str());
+		fputs(errtext.c_str(), stderr);
+		putc('\n', stderr);
 	}
 	if(unlikely(!success)) {
 		return EXIT_FAILURE;
 	}
 	execv(argv[0], argv);
-	fprintf(stderr, _("failed to execute %s\n"), argv[0]);
+	cerr << eix::format(_("failed to execute %s\n")) % argv[0];
 	return EXIT_FAILURE;
 }
