@@ -11,7 +11,6 @@
 
 #include <unistd.h>
 
-#include <cstdio>
 #include <cstdlib>
 #include <cstring>
 
@@ -85,7 +84,7 @@ inline static void print_unused(const string& filename, const string& excludefil
 
 /** Show a short help screen with options and commands. */
 static void dump_help() {
-	printf(_("Usage: %s [options] EXPRESSION\n"
+	cout << eix::format(_("Usage: %s [options] EXPRESSION\n"
 "\n"
 "Search for packages in the index generated by eix-update.\n"
 "EXPRESSION is true or false. Packages for which the EXPRESSION gives true,\n"
@@ -242,11 +241,11 @@ static void dump_help() {
 "    -f [m], --fuzzy [m]   Use fuzzy-search with a max. levenshtein-distance m.\n"
 "\n"
 "This program is covered by the GNU General Public License. See COPYING for\n"
-"further information.\n"),
-	program_name,
-	EIX_CACHEFILE,
-	EIX_REMOTECACHEFILE1,
-	EIX_REMOTECACHEFILE2);
+"further information.\n")) %
+	program_name %
+	EIX_CACHEFILE %
+	EIX_REMOTECACHEFILE1 %
+	EIX_REMOTECACHEFILE2;
 }
 
 static const char *formatstring;
